--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,33 @@
 .user-page {
   display: grid;
+  grid-template-columns: 1fr 2fr;
   width: 100%;
   height: 100vh;
   grid-template-areas: 
             "header header header header"
-            "sideMenu content content content"
-            "sideMenu content content content"
-            "sideMenu content content content";
+            "sideMenu messageArea messageArea messageArea"
+            "sideMenu messageArea messageArea messageArea"
+            "sideMenu messageArea messageArea messageArea";
 }
 
 .header {
   display: grid;
   grid-area: header;
   height: 10vh;
+  position: relative;
 }
 
 .side-menu {
   display: grid;
   grid-area: sideMenu;
   height: 90vh;
+  overflow-y: hidden;
+  position: relative;
 }
 
-.content {
+.messageArea {
   display: grid;
-  grid-area: content;
+  grid-area: messageArea;
+  overflow-y: hidden;
+  position: relative;
 }
